--- a/www/app/apps/leads/report.html
+++ b/www/app/apps/leads/report.html
@@ -3,7 +3,7 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="left">
-    <button ui-sref="app.leads" class="button back-button buttons button-clear header-item ion-arrow-left-a"></button>
+    <button ui-sref="{{prevState}}" class="button back-button buttons button-clear header-item ion-arrow-left-a"></button>
   </ion-nav-buttons>
   <ion-nav-title>
     <div class="bar bar-header bar-positive">
