--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false">
+<ion-view cache-view="true">
   <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
@@ -13,17 +13,20 @@
       <img src="img/new_icons/vi.png">
       <h1>ליד נשמר בהצלחה </h1>
     </div>
-    <ng-form ng-show="!leadSuccess" role="form" name="forms.leadForm" novalidate>
-      <fancy-select class="fancy-select text-right" header-text="בחר סוג ליד" items="typesByFormType" value="lead.LEAD_TYPE" value-property="TYPE" text-property="DESCRIPTION" allow-empty='false' text="בחרו סוג ליד" not-img-class="hidden" note-text=" : סוג ליד "
-        value-changed="onValueChanged(value)" get-custom-text="getCustomText(value)" note-img-class="icon ion-android-checkmark-circle" item-class="text-right pele_rtl">
+    <ng-form ng-show="!leadSuccess" role="form" name="forms.leadForm" novalidate autocomplete="off">
+      <fancy-select class="fancy-select text-right" header-text="בחרו סוג ליד" items="typesByFormType" value="lead.LEAD_TYPE" value-property="TYPE" text-property="DESCRIPTION" allow-empty='false' text="בחרו סוג ליד <i class='icon ion-arrow-down-b'></i>" not-img-class="hidden"
+        note-text=" : סוג ליד " value-changed="onValueChanged(value)" get-custom-text="getCustomText(value)" note-img-class="icon ion-android-checkmark-circle" item-class="text-right pele_rtl">
       </fancy-select>
       <label ng-show="submitted && !lead.LEAD_TYPE" class="item no-border input-error text-right">
           נא בחר סוג ליד
       </label>
+      <label ng-show="savedAttributes['lead_status']" class="pele_rtl">
+      <h3 class="lead-status">סטאטוס: {{savedAttributes['lead_status']}} </h3>
+      </label>
       <div class="list lead-form pele_rtl text-right">
         <label class="item no-border item-input">
               <span class="input-label">* שם פרטי</span>
-              <input type="text" name="FIRST_NAME"  ng-model="lead.FIRST_NAME" required>
+              <input type="text" name="FIRST_NAME"  ng-model="lead.FIRST_NAME" required autocomplete="off">
             </label>
         <label ng-show="forms.leadForm.FIRST_NAME.$invalid && (forms.leadForm.FIRST_NAME.$dirty || submitted)" class="item no-border input-error">
               יש להזין שם פרטי
@@ -31,7 +34,7 @@
 
         <label class="item no-border item-input">
                 <span class="input-label">* שם משפחה</span>
-                <input type="text"  name="LAST_NAME"  ng-model="lead.LAST_NAME" required>
+                <input type="text"  name="LAST_NAME"  ng-model="lead.LAST_NAME" required autocomplete="off">
               </label>
         <label ng-show="forms.leadForm.LAST_NAME.$invalid && (forms.leadForm.LAST_NAME.$dirty || submitted)" class="item no-border input-error">
                   יש להזין שם משפחה
@@ -39,7 +42,7 @@
 
         <label class="item no-border item-input item-text-wrap">
                 <span class="input-label">* מספר סלולרי לחזרה</span>
-                <input type="tel"  name="PHONE_NO_1"  ng-model="lead.PHONE_NO_1" required ng-pattern="/^05\d-?[0-9]{1}-?[0-9]{2}-?[0-9]{4}$/">
+                <input type="tel"  name="PHONE_NO_1"  ng-model="lead.PHONE_NO_1" required ng-pattern="/^05\d-?[0-9]{1}-?[0-9]{2}-?[0-9]{4}$/" autocomplete="off">
               </label>
         <label ng-show="forms.leadForm.PHONE_NO_1.$invalid &&  (forms.leadForm.PHONE_NO_1.$dirty  || submitted)" class="item no-border input-error">
                 יש להזין מס' סלולארי תקין
@@ -47,14 +50,14 @@
 
         <label class="item no-border item-input item-text-wrap">
                 <span class="input-label">מספר טלפון נוסף</span>
-                <input type="tel" name="PHONE_NO_2" ng-model="lead.PHONE_NO_2" ng-pattern="/^0[0-9]{2}-?[0-9]{1}-?[0-9]{2}-?[0-9]{3,4}$/">
+                <input type="tel" name="PHONE_NO_2" ng-model="lead.PHONE_NO_2" ng-pattern="/^0[0-9]{2}-?[0-9]{1}-?[0-9]{2}-?[0-9]{3,4}$/" autocomplete="off">
               </label>
         <label ng-show="forms.leadForm.PHONE_NO_2.$invalid && (forms.leadForm.PHONE_NO_2.$dirty  || submitted)" class="item no-border  input-error">
                 יש להזין מס' נוסף תקין
               </label>
         <label class="item no-border item-input">
               <span class="input-label">ת.ז לקוח</span>
-              <input type="tel" name="CUSTOMER_ID" ng-model="lead.CUSTOMER_ID" ng-pattern="/^[0-9]{8,9}$/">
+              <input type="tel" name="CUSTOMER_ID" ng-model="lead.CUSTOMER_ID" ng-pattern="/^[0-9]{8,9}$/" autocomplete="off">
             </label>
         <label ng-show="forms.leadForm.CUSTOMER_ID.$invalid && (forms.leadForm.CUSTOMER_ID.$dirty  || submitted)" class="item no-border  input-error">
               יש להזין מס' תקין'
@@ -66,7 +69,7 @@
                 <td class="text-center">
                   <div class="item item-input no-border">
                   <select ng-change="recreateEndHour()" name="from_hour" class="form-control select" ng-model="lead.from_hour"
-                  ng-options="option for option in from_hour_range"  ng-selected="option==lead.from_hour"  required />
+                  ng-options="option for option in from_hour_range"  ng-selected="option==lead.from_hour" />
                       <!--option ng-repeat="option in from_hour_range" ng-selected="option==lead.from_hour" value="{{option}}">{{option}}</option-->
                   </select>
                 </div>
@@ -75,15 +78,15 @@
                 <td class="text-left">
                   <div class="item item-input no-border">
                   <select ng-click="recreateEndHour()" name="to_hour" class="form-control select" ng-model="lead.to_hour"
-                  ng-options="option for option in to_hour_range"  ng-selected="option==lead.to_hour"  required />
+                  ng-options="option for option in to_hour_range"  ng-selected="option==lead.to_hour" />
                 </div>
                 </td>
               </tr>
             </table>
             </label>
-        <label ng-show="(forms.leadForm.to_hour.$invalid || forms.leadForm.from_hour.$invalid) &&  (forms.leadForm.from_hour.$dirty  || forms.leadForm.to_hour.$dirty || submitted)" class="item no-border input-error">
+        <!--label ng-show="(forms.leadForm.to_hour.$invalid || forms.leadForm.from_hour.$invalid) &&  (forms.leadForm.from_hour.$dirty  || forms.leadForm.to_hour.$dirty || submitted)" class="item no-border input-error">
               נא סמנו שעות רצויות  לחזרה
-            </label>
+           </label-->
 
         <label class="item no-border item-input item-text-wrap">
           <table style="width:100%" class="table margin-top-10 ">
@@ -124,11 +127,11 @@
   </ion-content>
   <div ng-show="!leadSuccess" style="background:#01579B" class="lead-footer bar bar-footer bar-positive">
     <a id="buttun-send" class="button   button-block icon-right ion-paper-airplane" ng-show="lead.LEAD_ID" ng-click="submit()">
-       <span ng-if="storedLead">עדכן</span>
+       <span ng-if="storedLead">שמור</span>
       <span ng-if="!storedLead">שלח</span>&nbsp;
     </a>
     <a id="buttun-files" class="button   button-block icon-right ion-paperclip" ng-if="uploadExists" ng-click="openModal()"> <span class="pel-badge">{{files.length||lead.files ||"0"}}</span> צרף מסמכים &nbsp;</a>
-    <a id="buttun-danger" class="button   button-block icon-right ion-trash-a" ng-show="storedLead" ng-click="delete()"> מחק &nbsp;</a>
+    <a id="buttun-actions" class="button  button-block button-stable icon-right ion-android-list" ng-show="storedLead" ng-click="actionSheet()"> פעולות נוספות &nbsp;</a>
   </div>
 
   <script id="upload.html" type="text/ng-template">
