--- a/www/app/apps/leads/report.html
+++ b/www/app/apps/leads/report.html
@@ -33,8 +33,7 @@
         <div><span class="pel-badge">{{$index+1}}</span> <strong>שם לקוח :</strong> {{l.FIRST_NAME}} {{l.LAST_NAME}} </div>
 
         <div ng-if="l.ATTRIBUTES.lead_description">
-          <stong>סוג ליד :</strong>
-            {{l.ATTRIBUTES.lead_description}} </div>
+          <strong>סוג ליד :</strong> {{l.ATTRIBUTES.lead_description}} </div>
         <div class="padd-right-15"><strong>נוצר : </strong>{{l.CREATED|date :'d/M/yyyy HH:mm'}}
           <span ng-if="l.ATTRIBUTES['lead_status']" class="" ng-class="statusClass[l.ATTRIBUTES['lead_status']]||'string-badge'"> {{l.ATTRIBUTES['lead_status']}}</span>
         </div>
