--- a/www/app/apps/leads/report.html
+++ b/www/app/apps/leads/report.html
@@ -17,8 +17,13 @@
         לא נמצאו לידים
       </ion-item>
     </ion-list>
-    <ion-list ng-if="type=='T'" class="pele_rtl text-right">
-      <ion-item ng-repeat="l in leads">
+    <label class="item item-input item-search pele_rtl text-right">
+      <input type="search" class="search-area" style="color:#fafafa;" placeholder="חיפוש" ng-model="searchText">
+      <a class="search-icon" ></a>
+    </label>
+
+    <!--ion-list ng-if="type=='T'" class="pele_rtl text-right">
+      <ion-item ng-repeat="l in leads | filter:searchText as filtered">
         <div class="row">
           <div class="col text-right"><span class="pel-badge">{{$index+1}}</span> <strong>שם לקוח :</strong> {{l.CUSTOMER_NAME}}</div>
         </div>
@@ -29,7 +34,7 @@
       </ion-item>
     </ion-list>
     <ion-list ng-if="type=='S'" class="pele_rtl text-right">
-      <ion-item ng-repeat="l in leads |orderBy:l.CREATED:true" class="item-icon-left">
+      <ion-item ng-repeat="l in leads |orderBy:l.CREATED:true | filter:searchText as filtered" class="item-icon-left">
         <div><span class="pel-badge">{{$index+1}}</span> <strong>שם לקוח :</strong> {{l.FIRST_NAME}} {{l.LAST_NAME}} </div>
 
         <div ng-if="l.ATTRIBUTES.lead_description">
@@ -37,9 +42,45 @@
         <div class="padd-right-15"><strong>נוצר : </strong>{{l.CREATED|date :'d/M/yyyy HH:mm'}}
           <span ng-if="l.ATTRIBUTES['lead_status']" class="" ng-class="statusClass[l.ATTRIBUTES['lead_status']]||'string-badge'"> {{l.ATTRIBUTES['lead_status']}}</span>
         </div>
-        <span class="pele-badge "><i ng-click="showLead(l) " class="icon ion-edit "></i></span>
+        <span class="pele-badge "><i ng-click="showLead(l)" class="icon ion-edit "></i></span>
 
       </ion-item>
+    </ion-list-->
+    <ion-list>
+      <div class="docs-menu" ng-repeat="(groupKey,docsGroup) in docsGroups" ng-if="docsGroup.leads.length>0">
+        <ion-item class="item-stable" ng-click="toggleActive(docsGroup)" ng-class="{active: activeGroup == docsGroup.groupName}">
+          <div class="row">
+            <div class="col ellipsis">
+              <ion-icon ng-class="activeGroup == docsGroup.groupName ? 'ion-arrow-left-b' : 'ion-arrow-down-b'"></ion-icon>
+              {{docsGroup.groupName}}
+            </div>
+            <div class="col col-10"><span class="pel-badge light-blue">{{filtered.length}}</span> </div>
+          </div>
+        </ion-item>
+
+        <ion-item ng-if="type=='S'" class="docs-menu-details item-icon-left pele_rtl" ng-repeat="l in docsGroup.leads | filter:searchText as filtered" ng-show="activeGroup == docsGroup.groupName" ng-click="forwardToDoc(docsGroup.DOC_ID, item.DOC_INIT_ID,item.TASK.NOTIFICATION_ID)">
+          <div><span class="pel-badge">{{$index+1}}</span> <strong>שם לקוח :</strong> {{l.FIRST_NAME}} {{l.LAST_NAME}} </div>
+
+          <div ng-if="l.ATTRIBUTES.lead_description">
+            <strong>סוג ליד :</strong> {{l.ATTRIBUTES.lead_description}} </div>
+          <div class="padd-right-15"><strong>נוצר : </strong>{{l.CREATED|date :'d/M/yyyy HH:mm'}}
+            <span ng-if="l.ATTRIBUTES['lead_status']" class="" ng-class="statusClass[l.ATTRIBUTES['lead_status']]||'string-badge'"> {{l.ATTRIBUTES['lead_status']}}</span>
+          </div>
+          <span class="pele-badge "><i ng-click="showLead(l)" class="icon ion-edit "></i></span>
+        </ion-item>
+
+
+        <ion-item ng-if="type=='T'" class="docs-menu-details item-icon-left pele_rtl" ng-repeat="l in docsGroup.leads | filter:searchText as filtered" ng-show="activeGroup == docsGroup.groupName" ng-click="forwardToDoc(docsGroup.DOC_ID, item.DOC_INIT_ID,item.TASK.NOTIFICATION_ID)">
+          <div class="row">
+            <div class="col text-right"><span class="pel-badge">{{$index+1}}</span> <strong>שם לקוח :</strong> {{l.CUSTOMER_NAME}}</div>
+          </div>
+          <div class="row">
+            <div class="col col-65"><strong>סטאטוס : </strong>{{l.TASK_STATUS}}</div>
+            <div class="col col-35"><strong>נוצר : </strong>{{l.CREATION_DATE|date :'d/M/yyyy HH:mm'}}</div>
+          </div>
+        </ion-item>
     </ion-list>
+    </div>
+
   </ion-content>
 </ion-view>
