--- a/www/app/apps/leads/menu.html
+++ b/www/app/apps/leads/menu.html
@@ -25,9 +25,12 @@
       <button ui-sref="app.leads.report({type:'S'})" class="button button-large button-stable button-block text-center">
       ניהול לידים עצמיים
       </button>
+
+    </div>
+    <div class="apps-front-menu text-center">
       <button ng-click="openModal()" class="button button-clear  button-light ion-information-circled">
-      תקנון
-        </button>
+    עזרה
+    </button>
     </div>
   </ion-content>
 </ion-view>
