--- a/www/app/apps/leads/menu.html
+++ b/www/app/apps/leads/menu.html
@@ -10,7 +10,7 @@
   </ion-nav-title>
 
   <ion-content class="pele-background">
-    <div class="apps-front-menu text-center" ng-show="stateType=='T'">
+    <div class="apps-front-menu text-center" ng-show="stateType=='T' ||!stateType">
       <button ui-sref="app.leads.lead({type:'T'})" class="button button-large button-stable button-block text-center">
     פתיחת ליד לשגרירים
     </button>
@@ -18,7 +18,7 @@
      סטאטוס לידים שפתחתי
     </button>
     </div>
-    <div class="apps-front-menu text-center" ng-show="stateType=='S'">
+    <div class="apps-front-menu text-center" ng-show="stateType=='S' ||!stateType">
       <button ui-sref="app.leads.lead({type:'S'})" class="button button-large button-stable button-block text-center">
       פתיחת ליד למעקב עצמי  </button>
 
