--- a/www/app/apps/leads/extra.html
+++ b/www/app/apps/leads/extra.html
@@ -19,7 +19,7 @@
     </div>
     <ng-switch on="e.type">
       <label class="item no-border item-input item-text-wrap">
-    
+
       <span  ng-show="e.inputFieldInd" class="input-label"><span ng-show="e.required">*</span> {{e.label}} </span>
       <input name="{{e.attribute_name}}" ng-switch-when="text" type="text" ng-model="lead.ATTRIBUTES[e.attribute_name]" ng-required="e.required" ng-disabled="e.disabled">
       <input date-input  ng-switch-when="date" name="{{e.attribute_name}}" type="date"  ng-model="lead.ATTRIBUTES[e.attribute_name]"  ng-required="e.required" min="{{e.computedMin}}" max="{{e.computedMax}}" ng-disabled="e.disabled">
@@ -30,7 +30,7 @@
          <option ng-if="option.k == undefined" ng-repeat="option in e.options" value="{{option}}">{{option}}</option>
 			</select>
       <label ng-switch-when="checkbox" class="toggle toggle-positive">
-             <input type="checkbox" name="{{e.attribute_name}}" ng-model="lead.ATTRIBUTES['e.attribute_name']" ng-true-value="{{e.trueValue}}" ng-false-value="{{e.falseValue}}" ng-required="e.required">
+             <input type="checkbox" name="{{e.attribute_name}}" ng-model="lead.ATTRIBUTES[e.attribute_name]" ng-true-value="{{e.trueValue}}" ng-false-value="{{e.falseValue}}" ng-required="e.required">
                <div class="track">
                  <div class="handle"></div>
            </div>
