--- a/www/app/apps/leads/report.html
+++ b/www/app/apps/leads/report.html
@@ -1,10 +1,10 @@
-<ion-view hide-back-button="true" cache-view="false">
+<ion-view cache-view="false">
   <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
-  <ion-nav-buttons side="left">
+  <!--ion-nav-buttons side="left">
     <button ui-sref="{{prevState}}" class="button back-button buttons button-clear header-item ion-arrow-left-a"></button>
-  </ion-nav-buttons>
+  </ion-nav-buttons-->
   <ion-nav-title>
     <div class="bar bar-header bar-positive">
       <div class="title">{{title}}
