--- a/www/app/apps/leads/lead.html
+++ b/www/app/apps/leads/lead.html
@@ -178,7 +178,7 @@
           <h3>הקובץ הועלה בהצלחה </h3>
           <h4>העלו קבצים נוספים או חזרו לטופס הליד</h4>
         </div>
-        <div ng-show="uploadState.error">
+        <div ng-show="uploadState.error" class="text-center">
           <h4 style="color:red">העלאת הקובץ נכשלה - נא נסו שוב</h4>
         </div>
       </ion-content>
