--- a/www/app/apps/leads/menu.html
+++ b/www/app/apps/leads/menu.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view cache-view="true">
   <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon">
   </button>
@@ -8,8 +8,8 @@
       <h1 class="title">{{title}}</h1>
     </div>
   </ion-nav-title>
-
   <ion-content class="pele-background">
+
     <div class="apps-front-menu text-center" ng-show="stateType=='T' ||!stateType">
       <button ui-sref="app.leads.lead({type:'T'})" class="button button-large button-stable button-block text-center">
     פתיחת ליד לשגרירים
