--- a/www/app/apps/dev/devmenu.html
+++ b/www/app/apps/dev/devmenu.html
@@ -23,7 +23,7 @@
         <i class="icon ion-ios-pulse-strong"></i>
       </a>
       <a class="item item-icon-left item-icon-right" ng-click="gateway()">
-         gateway : {{gateway_r.result}}
+         gateway : {{gateway_r}}
       </a>
       <a class="item item-icon-left item-icon-right" ng-click="clearLogFile()">
       <i ng-show="checkClear" style="color:green" class="icon ion-checkmark"></i>
