--- a/www/app/apps/leads/task.html
+++ b/www/app/apps/leads/task.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="true">
+<ion-view cache-view="false">
   <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
