--- a/www/app/apps/dev/devmenu.html
+++ b/www/app/apps/dev/devmenu.html
@@ -64,8 +64,8 @@
         <i class="icon ion-help-buoy"></i>
         חזרה לאפליקציה
       </a>
-
+    <ion-item> External image :<img style="width:50px" ng-src="https://msso.pelephone.co.il/mobileAppGw/public/media/hr1.png"></ion-item>
     </div>
-
+   
   </ion-content>
 </ion-view>
