--- a/www/index.html
+++ b/www/index.html
@@ -33,10 +33,8 @@
   <script src="lib/lodash.min.js"></script>
   <script src="lib/ocLazyLoad.min.js"></script>
   <!--script src="lib/sweetalert.min.js"></script-->
-
   <script src="lib/sweetalert2.all.min.js"></script>
-  <script src="lib/angular-idle.min.js"></script>
-
+  <!--script src="lib/angular-idle.min.js"></script-->
   <!-- your app's js -->
   <script src="app/app.js"></script>
   <script src="app/messages.js"></script>
