--- a/www/app/apps/leads/report.html
+++ b/www/app/apps/leads/report.html
@@ -21,31 +21,6 @@
       <input type="search" class="search-area" style="color:#fafafa;" placeholder="חיפוש" ng-model="searchText">
       <a class="search-icon" ></a>
     </label>
-
-    <!--ion-list ng-if="type=='T'" class="pele_rtl text-right">
-      <ion-item ng-repeat="l in leads | filter:searchText as filtered">
-        <div class="row">
-          <div class="col text-right"><span class="pel-badge">{{$index+1}}</span> <strong>שם לקוח :</strong> {{l.CUSTOMER_NAME}}</div>
-        </div>
-        <div class="row">
-          <div class="col col-65"><strong>סטאטוס : </strong>{{l.TASK_STATUS}}</div>
-          <div class="col col-35"><strong>נוצר : </strong>{{l.CREATION_DATE|date :'d/M/yyyy HH:mm'}}</div>
-        </div>
-      </ion-item>
-    </ion-list>
-    <ion-list ng-if="type=='S'" class="pele_rtl text-right">
-      <ion-item ng-repeat="l in leads |orderBy:l.CREATED:true | filter:searchText as filtered" class="item-icon-left">
-        <div><span class="pel-badge">{{$index+1}}</span> <strong>שם לקוח :</strong> {{l.FIRST_NAME}} {{l.LAST_NAME}} </div>
-
-        <div ng-if="l.ATTRIBUTES.lead_description">
-          <strong>סוג ליד :</strong> {{l.ATTRIBUTES.lead_description}} </div>
-        <div class="padd-right-15"><strong>נוצר : </strong>{{l.CREATED|date :'d/M/yyyy HH:mm'}}
-          <span ng-if="l.ATTRIBUTES['lead_status']" class="" ng-class="statusClass[l.ATTRIBUTES['lead_status']]||'string-badge'"> {{l.ATTRIBUTES['lead_status']}}</span>
-        </div>
-        <span class="pele-badge "><i ng-click="showLead(l)" class="icon ion-edit "></i></span>
-
-      </ion-item>
-    </ion-list-->
     <ion-list>
       <div class="docs-menu" ng-repeat="(groupKey,docsGroup) in docsGroups" ng-if="docsGroup.leads.length>0">
         <ion-item class="item-stable" ng-click="toggleActive(docsGroup)" ng-class="{active: activeGroup == docsGroup.groupName}">
@@ -58,7 +33,7 @@
           </div>
         </ion-item>
 
-        <ion-item ng-if="type=='S'" class="docs-menu-details item-icon-left pele_rtl" ng-repeat="l in docsGroup.leads | filter:searchText as filtered" ng-show="activeGroup == docsGroup.groupName">
+        <ion-item ng-click="showLead(l)" ng-if="type=='S'" class="docs-menu-details item-icon-left pele_rtl" ng-repeat="l in docsGroup.leads | filter:searchText as filtered" ng-show="activeGroup == docsGroup.groupName">
           <div><span ng-show="0" class="pel-badge">{{$index+1}}</span> <strong>שם לקוח :</strong> {{l.FIRST_NAME}} {{l.LAST_NAME}} </div>
 
           <div ng-if="l.ATTRIBUTES.lead_description">
@@ -67,18 +42,18 @@
             <span ng-if="l.ATTRIBUTES['lead_status']" class="" ng-class="statusClass[l.ATTRIBUTES['lead_status']]||'string-badge'"> {{l.ATTRIBUTES['lead_status']}}</span>
           </div>
           <div ng-show="l.UPDATE_DATE"><strong>תאריך עדכון : </strong>{{l.UPDATE_DATE|date :'d/M/yyyy HH:mm'}} </div>
-          <img ng-click="showLead(l)" class="icon" src="img/new_icons/edit_form.png">
+          <img class="icon" src="img/new_icons/edit_form2.png">
         </ion-item>
 
 
-        <ion-item ng-if="type=='T'" class="docs-menu-details item-icon-left pele_rtl" ng-repeat="l in docsGroup.leads | filter:searchText as filtered" ng-show="activeGroup == docsGroup.groupName">
+        <ion-item ng-click="showTask(l)" ng-if="type=='T'" class="docs-menu-details item-icon-left pele_rtl" ng-repeat="l in docsGroup.leads | filter:searchText as filtered" ng-show="activeGroup == docsGroup.groupName">
           <div><strong>סוג ליד :</strong> {{l.TASK_TYPE}} </div>
           <div><strong>שם לקוח :</strong> {{l.CUSTOMER_NAME}} </div>
           <div><strong>נוצר : </strong>{{l.CREATION_DATE|date :'d/M/yyyy HH:mm'}}
             <span ng-if="l.TASK_STATUS" class="" ng-class="statusClass[l.TASK_STATUS]||'string-badge'"> {{l.TASK_STATUS}}</span>
           </div>
           <div ng-show="l.ACTUAL_END_DATE"><strong>תאריך עדכון : </strong>{{l.ACTUAL_END_DATE|date :'d/M/yyyy HH:mm'}} </div>
-          <img ng-click="showTask(l)" class="icon" src="img/new_icons/show.png">
+          <img class="icon" src="img/new_icons/show_form.png">
         </ion-item>
     </ion-list>
     </div>
