--- a/www/app/apps/docApprove/p2_moduleList.html
+++ b/www/app/apps/docApprove/p2_moduleList.html
@@ -1,12 +1,9 @@
-<ion-view cache-view="false" hide-back-button="true">
+<ion-view cache-view="false">
   <ion-nav-title>
     <div class="bar bar-header bar-positive">
       <h1 class="title">בחירת טפסים לאישור</h1>
     </div>
   </ion-nav-title>
-    <ion-nav-buttons side="left">
-    <button class="button button-icon icon button-light icon-left ion-arrow-left-c" ng-click="goBack()"></button>
-  </ion-nav-buttons>
 
   <ion-content class="pele-background">
     <ion-refresher pulling-text="משוך לרענון..." on-refresh="doRefresh()">
