Fix bugs for PAY
Fix bugs for PAY

--- a/www/app/apps/busLeads/lead.html
+++ b/www/app/apps/busLeads/lead.html
@@ -109,8 +109,10 @@
         <label class="item no-border item-input item-text-wrap margin-top-10">
             <span class="input-label">פרטים נוספים</span>
           </label>
-          <a href="https://msso.pelephone.co.il/mobileAppGw/public/docs/takanon_shagririm.pdf">
-          קישור</a>
+          
+          <!-- <a href="https://msso.pelephone.co.il/mobileAppGw/public/docs/takanon_shagririm.pdf">קישור</a> -->
+          <a href="#" onclick="window.open('https://msso.pelephone.co.il/mobileAppGw/public/docs/takanon_shagririm.pdf', '_system', 'location=yes'); return false;">קישור</a>
+          
           <label class="item no-border item-input">
               <span class="input-label">* קראתי את התקנון</span>
               <label class="toggle">
