--- a/www/app/apps/docApprove/PAY/payDetails.html
+++ b/www/app/apps/docApprove/PAY/payDetails.html
@@ -38,7 +38,7 @@
                   </div>
                   <div class="row">
                     <div class="col">תאריך:</div>
-                    <div class="col col-75">{{action.ACTION_DATE | date : 'HH:ss dd-MM-yyyy'}}</div>
+                    <div class="col col-75">{{action.ACTION_DATE | date : 'HH:mm dd-MM-yyyy'}}</div>
                   </div>
                   <div class="row">
                     <div class="col">הערות:</div>
@@ -66,7 +66,7 @@
                     <div><strong> מספר ספק: </strong>{{supplier.VENDOR_NUMBER}}</div>
                     <div><strong> כמות חשבוניות: </strong>{{supplier.INVOICE_COUNT}}</div>
                     <div><strong> סכום חשבוניות: {{supplier.SUM_INVOICES}}</strong></div>
-                    <div ng-hide="supplier.PAY_THRU_DATE == null"><strong> תאריך פירעון : </strong>{{supplier.PAY_THRU_DATE|peldate | date : 'HH:ss dd-MM-yyyy'}}</div>
+                    <div ng-hide="supplier.PAY_THRU_DATE == null"><strong> תאריך פירעון : </strong>{{supplier.PAY_THRU_DATE|peldate | date : 'HH:mm dd-MM-yyyy'}}</div>
                 </ion-item> 
                 
                 <ion-item id={{supplier.INVOICES_DETAILS[0].INVOICE_NUM}} class="docs-menu-details item-icon-left pele_rtl" ng-repeat="invoice in supplier.INVOICES_DETAILS | filter:searchText as filtered" ng-show="activeGroup == supplier.VENDOR_NAME" >
